@@ -13,41 +13,40 @@ public class Connexion {
 		
 		login = login.trim();
 		mdp = mdp.trim();
-		BDD conec = new BDD("400129","stathammer_greta_admin","stathammer_v1");
+		BDD conec = new BDD();
 		
-		ArrayList<String> rendu = conec.selectUtilisateur(login, mdp);
+		ArrayList<Object> rendu = conec.selectUtilisateur(login, mdp);
 		int id = conec.UtilisateurID(login, mdp);
 		String role = conec.UtilisateurRole(login, mdp);
 		//System.out.println(role);
 		conec.close();
 		try {
-			
-		
-		if (login.equals(rendu.getFirst().trim())) {
-			User session = new User(login,id,role);
-			//primaryStage.close();
-			AfficheAccueil.affiche(primaryStage,session);
-		}else {
-			System.out.println(rendu);
+			if (login.equals(rendu.get(0))) {
+				User session = new User(login,id,role);
+				//primaryStage.close();
+				AfficheAccueil.affiche(primaryStage,session);
+			}
+			else {
+				System.out.println(rendu);
+			}
 		}
-		}catch(Exception e) {
+		catch(Exception e) {
 			AfficheConnexionFailed.affiche(primaryStage);
 		}
-		
 	}
 	
 	public static void updatePseudo(String pseudo,int id) throws SQLException {
-		BDD conec = new BDD("400129","stathammer_greta_admin","stathammer_v1");
+		BDD conec = new BDD();
 		conec.updateUtilisateur(pseudo,id);
 		conec.close();
 	}
 	public static void updateMdp(String mdp,int id) throws SQLException {
-		BDD conec = new BDD("400129","stathammer_greta_admin","stathammer_v1");
+		BDD conec = new BDD();
 		conec.updateMp(mdp,id);
 		conec.close();
 	}
 	public static String selectMdp(int id) throws SQLException {
-		BDD conec = new BDD("400129","stathammer_greta_admin","stathammer_v1");
+		BDD conec = new BDD();
 		String mdp =conec.UtilisateurMdp(id);
 		conec.close();
 		return mdp;
